compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__function_is_pure_on_erlang_if_external_on_js.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3514
expression: "\n@external(javascript, \"./maths.mjs\", \"add\")\nfn add(a: Int, b: Int) -> Int { a + b }\n\npub fn main() {\n  add(1, 2)\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "./maths.mjs", "add")
fn add(a: Int, b: Int) -> Int { a + b }

pub fn main() {
  add(1, 2)
  Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:6:3
  │
6 │   add(1, 2)
  │   ^^^^^^^^^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.
